----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-12-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/estonian: Updated, thanks to Alvar Soome (finsoft).
    * libraries/transformations/text_plain__dateformat.inc.php:
      patch 845690: show real data before transformation
    * left.php: bug 833790: put a workaround in place
  
2003-12-04 Garvin Hicking <grinch@supergarv.de>
    * browse_foreigner.php, mult_submits.inc.php, tbl_change.php,
      tbl_replace.php, tbl_replace_fields.php, tbl_row_delete,
      libraries/display_tbl.lib.php, libraries/display_tbl_links.lib.php:
      Multi row edit via checkboxes in browse mode is now available.
      This means, you can edit multiple records at once now.
    * tbl_row_delete.php, tbl_change.php, tbl_change.js: Fixed 
       (un)nullify() function
    * libraries/display_tbl.lib.php, libraries/display_tbl_links.lib.php:
      Made checkbox/edit/delete fields smaller
 
2003-12-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: the constant used to check
      if the transformation function is included no longer exists
    * libraries/transformations/: replaced "include" by "require_once"
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
    * lang/bulgarian:  Updated, thanks to Stanislav Yordanov (stanprog).
    * lang/danish: updates, thanks to Finn Sorensen (alleyman01)
    * lang/estonian: Updated, thanks to Alvar Soome (finsoft).

2003-11-28 Garvin Hicking <freakyfriday@supergarv.de>
    * main.php: Fixed one remaining preg_match

2003-11-27 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: bug 816666: sort order and aliases

2003-11-26 Alexander M. Turek  <lifeforrent@derrabus.de>
    * Almost every file:
      - Replaced all include / require commands by require_once where possible;